<resources>
    <string name="app_name">Travel Planner</string>
    <string name="back">Back</string>
    <string name="map">Map</string>
    <string name="itinerary">Itinerary</string>
    <string name="attractions">Attractions</string>
    <string name="settings">Settings</string>

    <string name="interests">Interests</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>

    <string name="choose_your_interests">Choose Your Interests</string>
    <string name="other_selected_interests">Other selected interests</string>
    <string name="nearby_attractions">Nearby Attractions</string>
    <string name="reccomended_attractions">Recommended Attractions</string>
    <string name="photo_scanner">Photo Scanner</string>
    <string name="scan_picture">Scan picture for interests</string>
    <string name="save_interests">Save interests</string>
    <string name="profil">Profile</string>
    <string name="manage_your_acount_settings">Manage your account settings</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="adjust_your_application_settings">Adjust your application settings</string>
    <string name="max_attractions_displayed">Max Attractions Displayed</string>
    <string name="maximum_distance">Maximal Distance For Attraction (km)</string>
    <string name="save_settings">Save Settings</string>

    <string name="select_picture">Select picture</string>
    <string name="scan_picture_for_interests">Scan picture for interests</string>
    <string name="add_interests_from_photo">+ Add interests from photo</string>

    <string name="nature">Nature</string>
    <string name="culture">Culture</string>
    <string name="adventure">Advanture</string>
    <string name="food">Food</string>

    <string name="your_picture">Your picture</string>

    <string name="your_location">Your location</string>
    <string name="select_location">Select your location</string>
    <string name="confirm_selection">Confirm selection</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <string name="enter_username">Enter your username</string>
    <string name="enter_email">Enter your email</string>
    <string name="selected_location">Selected location :</string>
    <string name="enable_custom_markers">Enable custom markers for map</string>
    <string name="refresh_results">Refresh results</string>

    <string name="attraction_details">Attraction Details</string>
    <string name="attraction_plan">Attraction Plan</string>
    <string name="confirm">Confirm</string>
    <string name="return_to_itinerary">Return to Itinerary</string>
    <string name="select_your_transport_mode">Select your mode of transport</string>

    <string name="rating">Rating :</string>
    <string name="address">Address :</string>
    <string name="place">Place name :</string>
    <string name="time">Time :</string>
    <string name="loading">Loading :</string>
    <string name="distance">Distance :</string>

    <string name="driving">Driving</string>
    <string name="walking">Walking</string>
    <string name="transit">Transit</string>

</resources>
